white spacing issues

--- a/style/course.css
+++ b/style/course.css
@@ -23,76 +23,81 @@
 
 #page-site-index .headingblock,
 .path-course-view .headingblock {
-	margin: 0 0 8px 0;
+    margin: 0 0 8px 0;
 }
 
 #page-course-enrol .generalbox,
 #page-course-enrol .coursebox {
-	margin-top: 8px;
+    margin-top: 8px;
 }
 
 #coursesearch,
 #coursesearch2 {
-	margin-top: 8px;
+    margin-top: 8px;
 }
 
 #page-course-pending .pendingcourserequests {
-	margin-bottom: 8px;
+    margin-bottom: 8px;
 }
 
 #page-course-pending .pendingcourserequests .cell {
-	padding: 0 4px;
+    padding: 0 4px;
 }
 
 .coursebox {
-	margin-bottom: 8px;
-	padding: 4px;
-	width: auto;
+    margin-bottom: 8px;
+    padding: 4px;
+    width: auto;
     border: 1px solid [[setting:bodybgcolor]];
 
 }
 
 .coursebox .info .name {
-	margin: 0;
+    margin: 0;
 }
 
 .categorylist {
-	width: auto;
+    width: auto;
 }
 
 .categorylist .category {
-	padding: 4px;
+    padding: 4px;
 }
 
-.path-course ul.section {
-	margin: 4px;
+.path-course .section {
+    margin: 4px;
+    clear: both; /* Clear the float in the summary text */
+}
+
+.path-course .section .left > div {
+    padding-top: 1em;
 }
 
 .categoryboxcontent {
-	border: 1px solid [[setting:bodybgcolor]];
+    border: 1px solid [[setting:bodybgcolor]];
 }
 
 .course_category_tree .category {
-	margin-bottom: 8px;
+    margin-bottom: 8px;
 }
 
 .course_category_tree .category_label {
-	font-size: 108%;
-	font-weight: bold;
-	padding: 0 0 4px 13px;
+    font-size: 108%;
+    font-weight: bold;
+    padding: 0 0 4px 13px;
 }
 
 .course_category_tree .category .course {
-	padding: 2px;
+    padding: 2px;
 }
 
 .course_category_tree .controls div {
-	margin-right: 4px;
+    margin-right: 4px;
 }
 
 .course_category_tree .category .course_info {
-	top: 2px;
-	right: 2px;
+    top: 2px;
+    right: 2px;
 }
 
 .path-course-view .content .summary .no-overflow {
@@ -101,8 +106,4 @@
 
 .path-course-view .content .summary .iconsmall {
     margin-left: 8px; /* Add margin between the summary text and the edit icon */
-}
-
-.path-course ul.section {
-    clear: both; /* Clear the float in the summary text */
 }
